--- a/views/layouts/index_layout.hbs
+++ b/views/layouts/index_layout.hbs
@@ -20,10 +20,19 @@
                 <div class="collapse navbar-collapse"
                      id="navcol-1">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item" role="presentation"><a class="nav-link active" href="/index_main">Home</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link active" href="/index">Home</a></li>
                         <li class="nav-item" role="presentation"><a class="nav-link" href="/addActivites">Add activity</a></li>
-                          <li class="nav-item" role="presentation"><a class="nav-link" href="#">Catalog</a></li>
-                        <li class="nav-item" role="presentation"><a class="nav-link" href="/login">Login</a></li>
+                          <li class="nav-item" role="presentation"><a class="nav-link" href="/catalog">Catalog</a></li>
+                        <li class="nav-item" role="presentation"><a class="nav-link" href="/login" >Login</a>
+
+                            <div class="nav-item dropdown"><a data-toggle="dropdown" aria-expanded="false" class="dropdown-toggle" href="#" >settings</a>
+                                <div role="menu" class="dropdown-menu">
+                                    <a role="presentation" class="dropdown-item" href="#">Update my activities</a>
+                                    <a role="presentation" class="dropdown-item" href="#">My activities list</a>
+                                    <a role="presentation" class="dropdown-item" href="/logout">log out</a></div>
+                            </div>
+
+                        </li>
                     </ul>
                 </div>
             </div>
