--- a/views/catalog_main.hbs
+++ b/views/catalog_main.hbs
@@ -37,60 +37,16 @@
                     <div class="col-md-9">
                         <div class="products">
                             <div class="row no-gutters">
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
+
+                                {{#each listActivite}}
+                                    <div class="col-12 col-md-6 col-lg-4">
+                                        <div class="clean-product-item">
+                                            <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src={{urlImgActivite}}></a></div>
+                                            <div class="product-name"><a href="#">{{desActivite}}</a></div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6 col-lg-4">
-                                    <div class="clean-product-item">
-                                        <div class="image"><a href="#"><img class="img-fluid d-block mx-auto" src="assets/img/tech/image2.jpg"></a><a href="#"></a></div>
-                                        <div class="product-name"><a href="#">Lorem ipsum dolor sit amet</a></div>
-                                    </div>
-                                </div>
+                                {{/each}}
+
                             </div>
                             <nav>
                                 <ul class="pagination">
